Add server name and version to the Footer
