# open-api-contracts/api.yaml
@@ -44,6 +44,11 @@ components:
         requestId:
           type: string
           format: uuid
+        version:
+          type: string
+        serverName:
+          type: string
+          enum: [ backend-node, backend-rust ]
 
     # Health endpoint response
     HealthData:
@@ -54,8 +59,6 @@ components:
         status:
           type: string
           enum: [healthy, degraded, unhealthy]
-        version:
-          type: string
 
     HealthResponse:
       allOf:
